# hackernews_ml

./: .gitignore  LICENSE  README.md
analysis/: .env_template  core_analysis.py  exploration.ipynb  exploration_karma_2.ipynb  nomic_wrapper.py  pyproject.toml  thematic_analysis.py  thematic_extraction.py
analysis/queries/: commentators_behavior.txt  comments_per_year.txt  contributions_vs_score.txt  freq_of_type_per_time.txt  stories_per_year.txt
scrapper/: .env_template  benchhmark  main.py  pyproject.toml
scrapper/hn_scrape/: __init__.py  datamodels.py  db_wrapper.py  scrapper.py
